tests/tooling/fixtures/native/recovery/positive/prototype_call_before_definition.objc3
module PrototypeCallBeforeDefinition;

fn twice(value: i32) -> i32;

fn main() -> i32 {
  return twice(9);
}

fn twice(value: i32) -> i32 {
  return value * 2;
}
