tests/tooling/fixtures/native/recovery/negative/negative_assignment_parser_missing_shift_right_assign_rhs.objc3
// Expected diagnostic code(s): O3P103.
module NegativeAssignmentParserMissingShiftRightAssignRhs;

fn main() -> i32 {
  let value = 16;
  value >>= ;
  return value;
}
